--- a/dino.glade
+++ b/dino.glade
@@ -144,74 +144,182 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkMenuItem" id="add_track1">
+		    <widget class="GtkImageMenuItem" id="add_track1">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">Add _track</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_add_track1_activate" last_modification_time="Wed, 02 Feb 2005 17:00:05 GMT"/>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image1">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-add</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
 		    </widget>
 		  </child>
 
 		  <child>
-		    <widget class="GtkMenuItem" id="delete_track1">
+		    <widget class="GtkImageMenuItem" id="delete_track1">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">Delete t_rack</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_delete_track1_activate" last_modification_time="Wed, 02 Feb 2005 17:00:05 GMT"/>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image2">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-delete</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
 		    </widget>
 		  </child>
 
 		  <child>
-		    <widget class="GtkMenuItem" id="edit_track_properties1">
+		    <widget class="GtkImageMenuItem" id="edit_track_properties1">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">Edit track _properties</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_edit_track_properties1_activate" last_modification_time="Sun, 20 Feb 2005 11:13:13 GMT"/>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image3">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-properties</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
 		    </widget>
 		  </child>
 
 		  <child>
-		    <widget class="GtkMenuItem" id="add_pattern1">
+		    <widget class="GtkSeparatorMenuItem" id="separator2">
+		      <property name="visible">True</property>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkImageMenuItem" id="add_pattern1">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">Add p_attern</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_add_pattern1_activate" last_modification_time="Wed, 02 Feb 2005 23:38:02 GMT"/>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image4">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-add</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
 		    </widget>
 		  </child>
 
 		  <child>
-		    <widget class="GtkMenuItem" id="delete_pattern1">
+		    <widget class="GtkImageMenuItem" id="delete_pattern1">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">Delete patt_ern</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_delete_pattern1_activate" last_modification_time="Wed, 02 Feb 2005 23:38:02 GMT"/>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image5">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-delete</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
 		    </widget>
 		  </child>
 
 		  <child>
-		    <widget class="GtkMenuItem" id="edit_pattern_properties1">
+		    <widget class="GtkImageMenuItem" id="edit_pattern_properties1">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">Edit pattern propert_ies</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_edit_pattern_properties1_activate" last_modification_time="Wed, 21 Sep 2005 20:40:30 GMT"/>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image6">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-properties</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
 		    </widget>
 		  </child>
 
 		  <child>
-		    <widget class="GtkMenuItem" id="add_controller1">
+		    <widget class="GtkSeparatorMenuItem" id="separator3">
+		      <property name="visible">True</property>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkImageMenuItem" id="add_controller1">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">Add c_ontroller</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_add_controller1_activate" last_modification_time="Sun, 18 Sep 2005 17:22:39 GMT"/>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image7">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-add</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
 		    </widget>
 		  </child>
 
 		  <child>
-		    <widget class="GtkMenuItem" id="delete_controller1">
+		    <widget class="GtkImageMenuItem" id="delete_controller1">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">Delete contro_ller</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_delete_controller1_activate" last_modification_time="Sun, 18 Sep 2005 17:22:39 GMT"/>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image8">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-delete</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
 		    </widget>
 		  </child>
 		</widget>
@@ -230,29 +338,65 @@
 		<widget class="GtkMenu" id="transport1_menu">
 
 		  <child>
-		    <widget class="GtkMenuItem" id="play1">
+		    <widget class="GtkImageMenuItem" id="play1">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">_Play</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_play1_activate" last_modification_time="Tue, 01 Feb 2005 20:06:00 GMT"/>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image9">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-media-play</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
 		    </widget>
 		  </child>
 
 		  <child>
-		    <widget class="GtkMenuItem" id="stop1">
+		    <widget class="GtkImageMenuItem" id="stop1">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">_Stop</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_stop1_activate" last_modification_time="Tue, 01 Feb 2005 20:06:00 GMT"/>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image10">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-media-pause</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
 		    </widget>
 		  </child>
 
 		  <child>
-		    <widget class="GtkMenuItem" id="go_to_start1">
+		    <widget class="GtkImageMenuItem" id="go_to_start1">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">_Go to start</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_go_to_start1_activate" last_modification_time="Tue, 01 Feb 2005 20:06:00 GMT"/>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image11">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-media-previous</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
 		    </widget>
 		  </child>
 		</widget>
@@ -270,11 +414,23 @@
 		<widget class="GtkMenu" id="menuitem4_menu">
 
 		  <child>
-		    <widget class="GtkMenuItem" id="about1">
+		    <widget class="GtkImageMenuItem" id="about1">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">_About Dino</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_about1_activate" last_modification_time="Thu, 16 Dec 2004 18:39:06 GMT"/>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image12">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-about</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
 		    </widget>
 		  </child>
 		</widget>
@@ -404,7 +560,7 @@
 		      <property name="tooltip" translatable="yes">Play</property>
 		      <property name="label" translatable="yes"></property>
 		      <property name="use_underline">True</property>
-		      <property name="stock_id">gtk-go-forward</property>
+		      <property name="stock_id">gtk-media-play</property>
 		      <property name="visible_horizontal">True</property>
 		      <property name="visible_vertical">True</property>
 		      <property name="is_important">False</property>
@@ -428,7 +584,7 @@
 			  <property name="tooltip" translatable="yes">Stop</property>
 			  <property name="label" translatable="yes"></property>
 			  <property name="use_underline">True</property>
-			  <property name="stock_id">gtk-stop</property>
+			  <property name="stock_id">gtk-media-pause</property>
 			  <property name="visible_horizontal">True</property>
 			  <property name="visible_vertical">True</property>
 			  <property name="is_important">False</property>
@@ -447,7 +603,7 @@
 		      <property name="tooltip" translatable="yes">Go to start</property>
 		      <property name="label" translatable="yes"></property>
 		      <property name="use_underline">True</property>
-		      <property name="stock_id">gtk-goto-first</property>
+		      <property name="stock_id">gtk-media-previous</property>
 		      <property name="visible_horizontal">True</property>
 		      <property name="visible_vertical">True</property>
 		      <property name="is_important">False</property>
@@ -785,7 +941,7 @@
 		    <widget class="GtkToolButton" id="tbn_add_controller">
 		      <property name="visible">True</property>
 		      <property name="sensitive">False</property>
-		      <property name="tooltip" translatable="yes">Add a new pattern</property>
+		      <property name="tooltip" translatable="yes">Add a new controller</property>
 		      <property name="label" translatable="yes">Add</property>
 		      <property name="use_underline">True</property>
 		      <property name="stock_id">gtk-add</property>
@@ -803,7 +959,7 @@
 		    <widget class="GtkToolButton" id="tbn_delete_controller">
 		      <property name="visible">True</property>
 		      <property name="sensitive">False</property>
-		      <property name="tooltip" translatable="yes">Delete the active pattern</property>
+		      <property name="tooltip" translatable="yes">Delete the active controller</property>
 		      <property name="label" translatable="yes">Delete</property>
 		      <property name="use_underline">True</property>
 		      <property name="stock_id">gtk-delete</property>
@@ -821,7 +977,7 @@
 		    <widget class="GtkToolButton" id="tbn_set_controller_properties">
 		      <property name="visible">True</property>
 		      <property name="sensitive">False</property>
-		      <property name="tooltip" translatable="yes">Change the properties for the active pattern</property>
+		      <property name="tooltip" translatable="yes">Change the properties for the active controller</property>
 		      <property name="label" translatable="yes">Properties</property>
 		      <property name="use_underline">True</property>
 		      <property name="stock_id">gtk-properties</property>
@@ -938,26 +1094,6 @@
 		      <property name="top_attach">2</property>
 		      <property name="bottom_attach">3</property>
 		      <property name="x_options">fill</property>
-		    </packing>
-		  </child>
-
-		  <child>
-		    <widget class="GtkHBox" id="box_note_editor">
-		      <property name="visible">True</property>
-		      <property name="homogeneous">False</property>
-		      <property name="spacing">0</property>
-
-		      <child>
-			<placeholder/>
-		      </child>
-		    </widget>
-		    <packing>
-		      <property name="left_attach">1</property>
-		      <property name="right_attach">2</property>
-		      <property name="top_attach">2</property>
-		      <property name="bottom_attach">3</property>
-		      <property name="x_options">fill</property>
-		      <property name="y_options">fill</property>
 		    </packing>
 		  </child>
 
@@ -1119,6 +1255,24 @@
 		      <property name="bottom_attach">1</property>
 		      <property name="x_options">fill</property>
 		      <property name="y_options">fill</property>
+		    </packing>
+		  </child>
+
+		  <child>
+		    <widget class="GtkHBox" id="box_note_editor">
+		      <property name="visible">True</property>
+		      <property name="homogeneous">False</property>
+		      <property name="spacing">0</property>
+
+		      <child>
+			<placeholder/>
+		      </child>
+		    </widget>
+		    <packing>
+		      <property name="left_attach">1</property>
+		      <property name="right_attach">2</property>
+		      <property name="top_attach">2</property>
+		      <property name="bottom_attach">3</property>
 		    </packing>
 		  </child>
 		</widget>
