--- a/dino.glade
+++ b/dino.glade
@@ -104,6 +104,7 @@
 		  <child>
 		    <widget class="GtkImageMenuItem" id="cut1">
 		      <property name="visible">True</property>
+		      <property name="sensitive">False</property>
 		      <property name="label">gtk-cut</property>
 		      <property name="use_stock">True</property>
 		      <signal name="activate" handler="on_cut1_activate" last_modification_time="Thu, 16 Dec 2004 18:39:06 GMT"/>
@@ -113,6 +114,7 @@
 		  <child>
 		    <widget class="GtkImageMenuItem" id="copy1">
 		      <property name="visible">True</property>
+		      <property name="sensitive">False</property>
 		      <property name="label">gtk-copy</property>
 		      <property name="use_stock">True</property>
 		      <signal name="activate" handler="on_copy1_activate" last_modification_time="Thu, 16 Dec 2004 18:39:06 GMT"/>
@@ -122,6 +124,7 @@
 		  <child>
 		    <widget class="GtkImageMenuItem" id="paste1">
 		      <property name="visible">True</property>
+		      <property name="sensitive">False</property>
 		      <property name="label">gtk-paste</property>
 		      <property name="use_stock">True</property>
 		      <signal name="activate" handler="on_paste1_activate" last_modification_time="Thu, 16 Dec 2004 18:39:06 GMT"/>
@@ -131,6 +134,7 @@
 		  <child>
 		    <widget class="GtkImageMenuItem" id="delete1">
 		      <property name="visible">True</property>
+		      <property name="sensitive">False</property>
 		      <property name="label">gtk-delete</property>
 		      <property name="use_stock">True</property>
 		      <signal name="activate" handler="on_delete1_activate" last_modification_time="Thu, 16 Dec 2004 18:39:06 GMT"/>
@@ -167,6 +171,7 @@
 		  <child>
 		    <widget class="GtkImageMenuItem" id="delete_track1">
 		      <property name="visible">True</property>
+		      <property name="sensitive">False</property>
 		      <property name="label" translatable="yes">Delete t_rack</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_delete_track1_activate" last_modification_time="Wed, 02 Feb 2005 17:00:05 GMT"/>
@@ -188,6 +193,7 @@
 		  <child>
 		    <widget class="GtkImageMenuItem" id="edit_track_properties1">
 		      <property name="visible">True</property>
+		      <property name="sensitive">False</property>
 		      <property name="label" translatable="yes">Edit track _properties</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_edit_track_properties1_activate" last_modification_time="Sun, 20 Feb 2005 11:13:13 GMT"/>
@@ -215,6 +221,7 @@
 		  <child>
 		    <widget class="GtkImageMenuItem" id="add_pattern1">
 		      <property name="visible">True</property>
+		      <property name="sensitive">False</property>
 		      <property name="label" translatable="yes">Add p_attern</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_add_pattern1_activate" last_modification_time="Wed, 02 Feb 2005 23:38:02 GMT"/>
@@ -236,6 +243,7 @@
 		  <child>
 		    <widget class="GtkImageMenuItem" id="delete_pattern1">
 		      <property name="visible">True</property>
+		      <property name="sensitive">False</property>
 		      <property name="label" translatable="yes">Delete patt_ern</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_delete_pattern1_activate" last_modification_time="Wed, 02 Feb 2005 23:38:02 GMT"/>
@@ -257,6 +265,7 @@
 		  <child>
 		    <widget class="GtkImageMenuItem" id="edit_pattern_properties1">
 		      <property name="visible">True</property>
+		      <property name="sensitive">False</property>
 		      <property name="label" translatable="yes">Edit pattern propert_ies</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_edit_pattern_properties1_activate" last_modification_time="Wed, 21 Sep 2005 20:40:30 GMT"/>
@@ -284,6 +293,7 @@
 		  <child>
 		    <widget class="GtkImageMenuItem" id="add_controller1">
 		      <property name="visible">True</property>
+		      <property name="sensitive">False</property>
 		      <property name="label" translatable="yes">Add c_ontroller</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_add_controller1_activate" last_modification_time="Sun, 18 Sep 2005 17:22:39 GMT"/>
@@ -305,6 +315,7 @@
 		  <child>
 		    <widget class="GtkImageMenuItem" id="delete_controller1">
 		      <property name="visible">True</property>
+		      <property name="sensitive">False</property>
 		      <property name="label" translatable="yes">Delete contro_ller</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_delete_controller1_activate" last_modification_time="Sun, 18 Sep 2005 17:22:39 GMT"/>
